--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     api 'com.clarifai.clarifai-api2:core:2.3.0'
     implementation'com.android.volley:volley:1.1.1'
     implementation'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.google.android:flexbox:2.0.1'
 
 }
